trunk/Archive2/e7/7455db78fb62b3/output
main.cpp:10:1: error: 'main' must return 'int'
void main()
^~~~
int
main.cpp:21:5: error: use of undeclared identifier 'multiple'; did you mean 'mulitple'?
    multiple(n, result);
    ^~~~~~~~
    mulitple
main.cpp:8:6: note: 'mulitple' declared here
void mulitple (int, int&);
     ^
main.cpp:22:16: warning: using the result of an assignment as a condition without parentheses [-Wparentheses]
    if (result = 7)
        ~~~~~~~^~~
main.cpp:22:16: note: place parentheses around the assignment to silence this warning
    if (result = 7)
               ^
        (         )
main.cpp:22:16: note: use '==' to turn this assignment into an equality comparison
    if (result = 7)
               ^
               ==
main.cpp:24:16: warning: using the result of an assignment as a condition without parentheses [-Wparentheses]
    if (result = 11)
        ~~~~~~~^~~~
main.cpp:24:16: note: place parentheses around the assignment to silence this warning
    if (result = 11)
               ^
        (          )
main.cpp:24:16: note: use '==' to turn this assignment into an equality comparison
    if (result = 11)
               ^
               ==
main.cpp:26:16: warning: using the result of an assignment as a condition without parentheses [-Wparentheses]
    if (result = 13)
        ~~~~~~~^~~~
main.cpp:26:16: note: place parentheses around the assignment to silence this warning
    if (result = 13)
               ^
        (          )
main.cpp:26:16: note: use '==' to turn this assignment into an equality comparison
    if (result = 13)
               ^
               ==
3 warnings and 2 errors generated.
